#105 Fixed Ant's initial node path